--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ httpx = "^0.18.1"
 python-dateutil = "^2.8.1"
 beautifulsoup4 = "^4.9.3"
 click = "^8.0.1"
+arrow = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.812"
