--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ arrow = "^1.1.0"
 mypy = "^0.812"
 black = "^21.5b2"
 
+[tool.poetry.scripts]
+tg_toot4warder = "tg_toot4warder.__main__:main"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
